[package]
name = "ant_cluster_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics_engine = {path="../graphics_engine"}
ant_cluster_data = {path="../ant_cluster_data"}
simulation = {path="../simulation"}
object = {path="../object"}
agent = {path="../agent"}
